INTYG-3368: Bytte alla secondaryknappar till info förutom checked vidarebefordra.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/new/arendeNew.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/new/arendeNew.directive.html
@@ -63,7 +63,7 @@
       </button>
 
       <!-- Avbryt -->
-      <button type="button" class="btn btn-default btn-secondary" ng-click="toggleArendeForm()" id="cancelArendeBtn">Avbryt
+      <button type="button" class="btn btn-default btn-info" ng-click="toggleArendeForm()" id="cancelArendeBtn">Avbryt
         fråga
       </button>
     </div>
