--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/panel/svar/arendePanelSvar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/panel/svar/arendePanelSvar.directive.html
@@ -84,7 +84,7 @@
                     id="sendAnswerBtn-{{arendeSvar.fragaInternReferens}}">
               <img src="/img/loader-small-green.gif" ng-show="arendeSvar.updateInProgress"> Skicka svar
             </button>
-            <button type="button" class="btn btn-default btn-secondary" ng-click="abortTextAnswer()"
+            <button type="button" class="btn btn-default btn-info" ng-click="abortTextAnswer()"
                     ng-show="arendeSvar.answerKompletteringWithText"
                     id="abortAnswerBtn-{{qa.internReferens}}"> Avbryt
             </button>
