INTYG-3356: Flyttat upp info-ruta "kompletteringsbegäran" mellan frågan och svaret för utkast.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/boolean.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/boolean.formly.html
@@ -1,5 +1,5 @@
 <div class="form-inline">
-    <wc-form-label to="to"></wc-form-label>
+    <wc-form-label to="to" key="options.key"></wc-form-label>
     <label class="radio-inline big-radio-label">
         <input id="{{options.key}}Yes" name="{{options.key}}" type="radio" class="big-radio"
                ng-value="true" ng-model="model[options.key]"/> Ja
