--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/diagnos.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/diagnos.formly.html
@@ -1,3 +1,4 @@
+<wc-utkast-komplettering key="{{options.key}}" margin-bottom="true"></wc-utkast-komplettering>
 <div class="row bottom-padding-small">
     <div class='col-xs-12'>
         <div class="form-group">
@@ -81,5 +82,4 @@
         </tr>
     </table>
     <wc-field-validation field-type="{{options.type}}" validations="diagnosValidations"></wc-field-validation>
-    <wc-field-komplettering key="{{options.key}}"></wc-field-komplettering>
 </div>
