--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/multiText.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/multiText.formly.html
@@ -1,5 +1,5 @@
 <div>
-  <wc-form-label to="to"></wc-form-label>
+  <wc-form-label to="to" key="options.key"></wc-form-label>
   <textarea id="{{options.key}}" name="{{options.key}}" class="form-control" rows="6" auto-expand ng-model="model[options.key]"
             maxlength="4000">
   </textarea>
