--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcFormLabel.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcFormLabel.directive.html
@@ -7,6 +7,8 @@
     <span ng-if="to.label" wc-help-mark field-dynamic-help-text="{{to.label}}.HLP"></span>
     <span ng-if="to.staticHelpId" wc-help-mark field-help-text="{{to.staticHelpId}}"></span>
   </h4>
+  <wc-utkast-komplettering ng-if="(frageId && delFrageId || frageId && !delFrageId) && !to.forceHeadingTypeLabel" key="{{key}}" margin-bottom="true"></wc-utkast-komplettering>
+
   <h5 ng-if="delFrageId && !to.forceHeadingTypeLabel">
     <span ng-if="delFrageId" dynamic-label key="{{delFrageId}}.RBK"></span>
     <span ng-if="to.staticLabelId" message key="{{to.staticLabelId}}"></span>
@@ -15,6 +17,8 @@
     <span ng-if="delFrageId" wc-help-mark field-dynamic-help-text="{{delFrageId}}.HLP"></span>
     <span ng-if="to.staticHelpId" wc-help-mark field-help-text="{{to.staticHelpId}}"></span>
   </h5>
+  <wc-utkast-komplettering ng-if="!frageId && delFrageId && !to.forceHeadingTypeLabel" key="{{key}}" margin-bottom="true"></wc-utkast-komplettering>
+
   <label ng-if="to.forceHeadingTypeLabel">
     <span ng-if="to.label" dynamic-label key="{{to.label}}.RBK"></span>
     <span ng-if="to.staticLabelId" message key="{{to.staticLabelId}}"></span>
@@ -23,4 +27,5 @@
     <span ng-if="to.label" wc-help-mark field-dynamic-help-text="{{to.label}}.HLP"></span>
     <span ng-if="to.staticHelpId" wc-help-mark field-help-text="{{to.staticHelpId}}"></span>
   </label>
+  <wc-utkast-komplettering ng-if="to.forceHeadingTypeLabel" key="{{key}}" margin-bottom="true"></wc-utkast-komplettering>
 </div>
