--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcField.directive.html
@@ -1,8 +1,8 @@
 <div class="intyg-block clearfix">
   <div class="intyg-block__titlerow" ng-if="showTitleRow()">
     <h4 class="intyg-field-number" ng-if="fieldNumber != undefined">
-      <span message key="modules.label.field"></span> {{fieldNumber}} </h4>
-
+      <span message key="modules.label.field"></span> {{fieldNumber}}
+    </h4>
     <h3 class="intyg-block__heading">
       <span ng-if="fieldLabel" message key="{{fieldLabel}}"></span>
       <span ng-if="fieldDynamicLabel" dynamic-label key="{{fieldDynamicLabel}}"></span>
