--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkMultiText.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkMultiText.formly.html
@@ -4,7 +4,10 @@
     <span dynamic-label key="FRG_{{to.frgId}}.RBK"></span>
     <span wc-help-mark field-dynamic-help-text="FRG_{{to.frgId}}.HLP"></span>
   </label>
-	<div ng-if="to.open" class="fold-animation">
+
+  <wc-utkast-komplettering key="{{options.key}}" margin-top="true"></wc-utkast-komplettering>
+
+  <div ng-if="to.open" class="fold-animation">
 		<label class="control-label inline-block webcert-top-padding-section" ng-class="{'bold' : to.bold}">
         <span dynamic-label key="DFR_{{to.frgId}}.1.RBK"></span> *
         <span wc-help-mark field-dynamic-help-text="DFR_{{to.frgId}}.1.HLP"></span>
