--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/date.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/date.formly.html
@@ -8,6 +8,7 @@
         <span dynamic-label ng-if="to.label" key="{{to.label}}.RBK"></span>
     </label>
     <span wc-help-mark ng-if="!to.disableHelp" field-dynamic-help-text="{{to.label + '.HLP'}}"></span>
+    <wc-utkast-komplettering key="{{options.key}}" margin-top="true"></wc-utkast-komplettering>
   </div>
   <div class="col-md-6">
     <span wc-date-picker-field target-model="model[options.key]" add-date-parser="loose" on-blur="validate()"></span>
