--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleDate.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleDate.formly.html
@@ -1,5 +1,5 @@
 <div class="form-inline">
-  <wc-form-label to="to"></wc-form-label>
+  <wc-form-label to="to" key="options.key"></wc-form-label>
   <div>
     <span wc-date-picker-field target-model="model[options.key]" add-date-parser="loose" on-blur="validate()"></span>
   </div>
