--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleText.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleText.formly.html
@@ -1,6 +1,6 @@
 <div class="form-{{to.formType}} row" ng-class="{'indent' : to.indent, 'bold' : to.bold}">
   <div class="col-md-{{to.labelColSize}} control-label">
-    <wc-form-label to="to"></wc-form-label>
+    <wc-form-label to="to" key="options.key"></wc-form-label>
   </div>
   <div class="col-md-{{12 - to.labelColSize}}">
     <input id="{{options.key}}" type="text" class="form-control" ng-disabled="to.disabled"
