INTYG-3470: Uppdatering av texter i Mina intyg

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/intyg/miIntygMainField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/intyg/miIntygMainField.directive.html
@@ -57,7 +57,7 @@
     <div class="row ">
       <div class="col-xs-12 hidden-sm hidden-md hidden-lg header-row">
         <button type="button" class="btn btn-primary pull-right" ata-toggle="modal"
-                title="{{messageService.getProperty('button.alt.archive')}}"
+                title="{{messageService.getProperty('button.archive.tooltip')}}"
                 ng-click="openArchiveDialog(cert)">
           <span class="glyphicon glyphicon-folder-close white"></span>
         </button>
