GUIFIX: Genomgång av utseende LISJP. Rester samlade i jiror.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/prognos.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/prognos.formly.html
@@ -2,7 +2,7 @@
   <div>
     <h4 class="inline-block" ng-class="{'bold' : to.bold}">
       <span dynamic-label key="{{to.label}}.RBK"></span>
-      {{to.required ? '*' : ''}}
+      <span class="required">{{to.required ? '*' : ''}}</span>
       <span wc-help-mark field-dynamic-help-text="{{to.label}}.HLP"></span>
     </h4>
   </div>
