--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleText.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleText.formly.html
@@ -1,5 +1,5 @@
 <div class="form-{{to.formType}} row" ng-class="{'indent' : to.indent, 'bold' : to.bold}">
-  <div class="col-md-{{to.labelColSize}} control-label">
+  <div class="col-md-{{to.labelColSize}} control-label label__no-break">
     <wc-form-label to="to" key="options.key"></wc-form-label>
   </div>
   <div class="col-md-{{12 - to.labelColSize}}">
