--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
@@ -1,6 +1,6 @@
 <div wc-date-period-manager model="model" class="sjukskrivningar">
   <h4 class="noH5After">
-    <span dynamic-label key="{{to.label}}.RBK"></span> *
+    <span dynamic-label key="{{to.label}}.RBK"></span> <span class="required">*</span>
   </h4>
 
   <wc-utkast-komplettering key="{{options.key}}" komplettering-key="{{to.kompletteringKey}}" margin-bottom="true"></wc-utkast-komplettering>
