--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcFormLabel.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcFormLabel.directive.html
@@ -3,7 +3,7 @@
     <span ng-if="frageId" dynamic-label key="{{frageId}}.RBK"></span>
     <span ng-if="to.staticLabelId" message key="{{to.staticLabelId}}"></span>
     <span ng-if="to.staticLabel">{{to.staticLabel}}</span>
-    {{to.required ? '*' : ''}}
+    <span class="required">{{to.required ? '*' : ''}}</span>
     <span ng-if="to.label" wc-help-mark field-dynamic-help-text="{{to.label}}.HLP"></span>
     <span ng-if="to.staticHelpId" wc-help-mark field-help-text="{{to.staticHelpId}}"></span>
   </h4>
@@ -13,7 +13,7 @@
     <span ng-if="delFrageId" dynamic-label key="{{delFrageId}}.RBK"></span>
     <span ng-if="to.staticLabelId" message key="{{to.staticLabelId}}"></span>
     <span ng-if="to.staticLabel">{{to.staticLabel}}</span>
-    {{to.required == true ? '*' : ''}}
+    <span class="required">{{to.required == true ? '*' : ''}}</span>
     <span ng-if="delFrageId" wc-help-mark field-dynamic-help-text="{{delFrageId}}.HLP"></span>
     <span ng-if="to.staticHelpId" wc-help-mark field-help-text="{{to.staticHelpId}}"></span>
   </h5>
@@ -23,7 +23,7 @@
     <span ng-if="to.label" dynamic-label key="{{to.label}}.RBK"></span>
     <span ng-if="to.staticLabelId" message key="{{to.staticLabelId}}"></span>
     <span ng-if="to.staticLabel">{{to.staticLabel}}</span>
-    {{to.required == true ? '*' : ''}}
+    <span class="required">{{to.required == true ? '*' : ''}}</span>
     <span ng-if="to.label" wc-help-mark field-dynamic-help-text="{{to.label}}.HLP"></span>
     <span ng-if="to.staticHelpId" wc-help-mark field-help-text="{{to.staticHelpId}}"></span>
   </label>
