--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastErrorSummary.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastErrorSummary.directive.html
@@ -1,6 +1,6 @@
 <div id="visa-vad-som-saknas-lista" ng-show="viewState.common.validation.sections.length > 0">
-  <h3><span message key="draft.saknar-uppgifter"></span></h3>
-  <div class="alert alert-danger" style="margin-right: 20px">
+  <h3 class=""><span message key="draft.saknar-uppgifter"></span></h3>
+  <div class="alert alert-danger">
     <ul>
       <li ng-repeat="message in viewState.common.validation.sections">
         <a href="" ng-click="scrollTo(message)"><span message
