--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastErrorSummaryFK.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastErrorSummaryFK.directive.html
@@ -1,7 +1,7 @@
 <div id="visa-vad-som-saknas-lista" ng-show="viewState.common.validation.sections.length > 0">
   <h3><span message key="draft.saknar-uppgifter"></span></h3>
-  <div class="alert alert-danger" style="margin-right: 20px">
-    <ul>
+  <div class="alert alert-danger">
+    <ul class="ul__thin-bullet">
       <li ng-repeat="message in viewState.common.validation.sections">
         <a href="" ng-click="scrollTo(message)">{{lookUpLabel(message)}}</span></a>
       </li>
