--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/panel/svar/arendePanelSvar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/panel/svar/arendePanelSvar.directive.html
@@ -36,6 +36,10 @@
         </div>
         <div id="{{panelId}}-{{arendeSvar.internReferens}}-meddelande" class="arende-block-body">
           {{arendeSvar.meddelande}}
+          <div ng-if="arendeSvar.besvaradMedIntyg">
+            <span message key="common.arende.svar.besvaradmedintyg"></span><br>
+            <button class="btn btn-link btn-link__purelink" ng-click='goToIntyg()' ><span message key="common.arende.svar.go"></span></button>
+          </div>
         </div>
       </div>
     </div>
