INTYG-3318: Stöd för intyg som svar för fk7263.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/panel/svar/arendePanelSvar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/panel/svar/arendePanelSvar.directive.html
@@ -36,7 +36,7 @@
         </div>
         <div id="{{panelId}}-{{arendeSvar.internReferens}}-meddelande" class="arende-block-body">
           {{arendeSvar.meddelande}}
-          <div ng-if="arendeSvar.besvaradMedIntyg">
+          <div ng-if="arendeSvar.answeredWithIntyg">
             <span message key="common.arende.svar.besvaradmedintyg"></span><br>
             <button class="btn btn-link btn-link__purelink" ng-click='goToIntyg()' ><span message key="common.arende.svar.go"></span></button>
           </div>
