--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
@@ -1,39 +1,7 @@
 <div>
   <div ng-if="!isSigned" class="print-hide utkast-footer">
 
-    <h3 wc-authority="!SIGNERA_INTYG">
-      <span message key="common.sign.intyg"></span>
-    </h3>
-
-    <div id="sign-requires-doctor-message-text" wc-authority="!SIGNERA_INTYG"
-         intygstyp="{{viewState.common.intyg.type}}" class="alert alert-info">
-      <span message key="draft.onlydoctorscansign"></span>
-    </div>
-
-    <div wc-authority="!SIGNERA_INTYG, VIDAREBEFORDRA_UTKAST" intygstyp="{{viewState.common.intyg.type}}">
-      <p>
-        <span message key="draft.notifydoctor"></span>
-      </p>
-      <div class="form-group">
-        <button type="button" id="vidarebefordraEjHanterad" class="btn"
-                ng-class="{'btn-info': !viewState.draftModel.vidarebefordrad, 'btn-default btn-secondary' : viewState.draftModel.vidarebefordrad}"
-                title="Skicka mejl med en länk till utkastet för att informera den läkare som ska signera det."
-                ng-click="vidarebefordraUtkast()">
-          <span class="glyphicon glyphicon-share-alt"
-                ng-class="{'forward-active': !viewState.draftModel.vidarebefordrad, 'forward-inactive': viewState.draftModel.vidarebefordrad}"></span>
-        </button>
-      </div>
-
-      <div class="intyg-block">
-        <label for="mark-as-vidarebefordrad">
-          <input id="mark-as-vidarebefordrad" type="checkbox" ng-disabled="viewState.common.vidarebefordraInProgress"
-                 ng-model="viewState.draftModel.vidarebefordrad" ng-change="onVidarebefordradChange()" />
-          Vidarebefordrad
-        </label> <span ng-if="viewState.common.vidarebefordraInProgress"> <img
-          src="/img/ajax-loader-kit-16x16.gif"></span>
-      </div>
-    </div>
-
+    <!-- Läkare: Signera -->
     <div wc-authority="SIGNERA_INTYG" intygstyp="{{viewState.common.intyg.type}}">
       <p ng-show="viewState.common.intyg.isKomplettering">
         <span message key="draft.completion.signinfo"></span>
@@ -43,6 +11,55 @@
               ng-click="sign()"><img ng-show="signingWithSITHSInProgress" ng-src="/img/ajax-loader-small-green.gif" />
         <span message key="common.{{viewState.common.intyg.isKomplettering ? 'signsend' : 'sign'}}"></span>
       </button>
+    </div>
+
+    <!-- Vårdadmin -->
+    <div wc-authority="!SIGNERA_INTYG">
+
+      <!-- Signera intyg -->
+      <h3 >
+        <span message key="common.sign.intyg"></span>
+      </h3>
+
+      <!-- Endast läkare får signera -->
+      <div id="sign-requires-doctor-message-text"
+           intygstyp="{{viewState.common.intyg.type}}"
+           class="alert alert-info">
+        <span message key="draft.onlydoctorscansign"></span>
+      </div>
+
+      <!-- check for missing info in utkast -->
+      <div class="form-group">
+        <button type="button" id="checkMissing" class="btn btn-success"
+                ng-click="checkMissing()">
+          <span message key="draft.notify.check-missing"></span>
+        </button>
+        <span wc-help-mark field-help-text="draft.notify.check-missing.help"></span>
+      </div>
+
+      <!-- Notifiera läkare genom att vidarebefordra -->
+      <div wc-authority="VIDAREBEFORDRA_UTKAST" intygstyp="{{viewState.common.intyg.type}}">
+        <div class="form-group">
+          <button type="button" id="vidarebefordraEjHanterad" class="btn"
+                  ng-class="{'btn-success': !viewState.draftModel.vidarebefordrad, 'btn-default btn-secondary' : viewState.draftModel.vidarebefordrad}"
+                  title="Skicka mejl med en länk till utkastet för att informera den läkare som ska signera det."
+                  ng-click="vidarebefordraUtkast()">
+          <span class="glyphicon glyphicon-share-alt"
+                ng-class="{'forward-active': !viewState.draftModel.vidarebefordrad, 'forward-inactive': viewState.draftModel.vidarebefordrad}"></span>
+             <span message key="draft.notify.button"></span>
+          </button>
+          <span wc-help-mark field-help-text="draft.notify.help"></span>
+        </div>
+
+        <div class="intyg-block">
+          <label for="mark-as-vidarebefordrad">
+            <input id="mark-as-vidarebefordrad" type="checkbox" ng-disabled="viewState.common.vidarebefordraInProgress"
+                   ng-model="viewState.draftModel.vidarebefordrad" ng-change="onVidarebefordradChange()" />
+            Vidarebefordrad
+          </label> <span ng-if="viewState.common.vidarebefordraInProgress"> <img
+            src="/img/ajax-loader-kit-16x16.gif"></span>
+        </div>
+      </div>
     </div>
 
   </div>
