--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastErrorSummaryFK.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastErrorSummaryFK.directive.html
@@ -7,4 +7,12 @@
       </li>
     </ul>
   </div>
+
+  <div class="intyg-block">
+    <button type="button" id="checkMissing" class="btn btn-default"
+            ng-click="hideMissing()">
+      <span message key="draft.notify.hide-missing.button"></span>
+    </button>
+  </div>
+
 </div>
