--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastErrorSummary.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastErrorSummary.directive.html
@@ -1,7 +1,7 @@
 <div id="visa-vad-som-saknas-lista" ng-show="viewState.common.validation.sections.length > 0">
   <h3 class=""><span message key="draft.saknar-uppgifter"></span></h3>
   <div class="alert alert-danger">
-    <ul>
+    <ul class="ul__thin-bullet">
       <li ng-repeat="message in viewState.common.validation.sections">
         <a href="" ng-click="scrollTo(message)"><span message
                                                       key="{{viewState.common.intyg.type}}.label.{{message}}"></span></a>
