--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/fk/wcIntygFields.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/fk/wcIntygFields.directive.html
@@ -2,10 +2,10 @@
 
   <div wc-intyg-category field-dynamic-label="KAT_{{group.templateOptions.category}}.RBK"category-key="{{group.templateOptions.category}}" ng-repeat="group in intygFields">
     <div ng-repeat="field in group.fieldGroup">
-      <div wc-intyg-field category-key="{{group.templateOptions.category}}" field="field" next-field="group.fieldGroup[$index+1]"
+      <div wc-intyg-field category-key="{{group.templateOptions.category}}" prev-field="field.fieldGroup[$index-1]" field="field" next-field="group.fieldGroup[$index+1]"
            intyg-model="intygModel"></div>
       <div ng-repeat="subField in field.fieldGroup">
-        <div wc-intyg-field category-key="{{group.templateOptions.category}}" field="subField" next-field="field.fieldGroup[$index+1]" intyg-model="intygModel"></div>
+        <div wc-intyg-field category-key="{{group.templateOptions.category}}" prev-field="field.fieldGroup[$index-1]" field="subField" next-field="field.fieldGroup[$index+1]" intyg-model="intygModel"></div>
       </div>
     </div>
   </div>
