INTYG-3526: Löst så båda konverteringsformaten för frågasvar stöds från backend.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/new/arendeNew.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/new/arendeNew.directive.html
@@ -1,15 +1,14 @@
 <div>
 
   <!-- Arende button -->
-  <div ng-show="getNewArendeState() == 'new'"
+  <div class="form-group"
+       ng-show="getNewArendeState() == 'new'"
        wc-check-vardenhet
        wc-authority feature="skapaNyFraga" intygstyp="{{localViewState.parentViewState.intygProperties.type}}"
        vardenhet="{{intyg.grundData.skapadAv.vardenhet.enhetsid}}">
-    <div class="form-group">
       <button type="button" class="btn btn-success" ng-click="toggleArendeForm()" id="askArendeBtn">Ny fråga till
         Försäkringskassan
       </button>
-    </div>
   </div>
   <div ng-if="getNewArendeState() == 'not-sent'"
        wc-check-vardenhet
