INTYG-3525: Added ng-click to the checkMultiText formly checkbox directive so validation runs whenever such a checkbox is clicked.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkMultiText.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkMultiText.formly.html
@@ -1,6 +1,6 @@
 <div>
 	<label class="control-label inline-block checkbox-inline bold big-checkbox-label check-multi-text__label">
-    <input type="checkbox" class="big-checkbox" ng-model="to.open">
+    <input type="checkbox" class="big-checkbox" ng-model="to.open" ng-click="validate()">
     <span dynamic-label key="FRG_{{to.frgId}}.RBK"></span>
     <span wc-help-mark field-dynamic-help-text="FRG_{{to.frgId}}.HLP"></span>
   </label>
