INTYG-3521: (samt INTYG-3534). Visar nu döljknappen för validering endast för vårdadmin men på alla intyg.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastErrorSummary.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastErrorSummary.directive.html
@@ -8,4 +8,12 @@
       </li>
     </ul>
   </div>
+
+  <div wc-authority="!SIGNERA_INTYG" class="intyg-block">
+    <button type="button" id="checkMissing" class="btn btn-default"
+            ng-click="hideMissing()">
+      <span message key="draft.notify.hide-missing.button"></span>
+    </button>
+  </div>
+
 </div>
