--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastErrorSummaryFK.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastErrorSummaryFK.directive.html
@@ -8,7 +8,7 @@
     </ul>
   </div>
 
-  <div class="intyg-block">
+  <div wc-authority="!SIGNERA_INTYG" class="intyg-block">
     <button type="button" id="checkMissing" class="btn btn-default"
             ng-click="hideMissing()">
       <span message key="draft.notify.hide-missing.button"></span>
