--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/fk/wcIntygField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/fk/wcIntygField.directive.html
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div ng-switch-when="checkbox-inline">
-        <div ng-switch="intygModel[field.key] == true">
+        <div ng-switch="intygModel[field.key] === true">
           <span id="{{field.key}}-Ja" ng-switch-when="true">Ja</span>
           <span id="{{field.key}}-Nej" ng-switch-when="false">Nej</span>
         </div>
