--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
@@ -8,6 +8,8 @@
       </p>
       <button type="button" id="signera-utkast-button" class="btn btn-success"
               ng-disabled="certForm.$dirty || signingWithSITHSInProgress"
+              ng-keydown="initValidationSequence('signera-utkast-button')"
+              ng-mousedown="initValidationSequence('signera-utkast-button')"
               ng-click="sign()"><img ng-show="signingWithSITHSInProgress" ng-src="/img/ajax-loader-small-green.gif" />
         <span message key="common.{{viewState.common.intyg.isKomplettering ? 'signsend' : 'sign'}}"></span>
       </button>
@@ -30,7 +32,9 @@
 
       <!-- check for missing info in utkast -->
       <div class="form-group">
-        <button type="button" id="checkMissing" class="btn btn-success"
+        <button type="button" id="show-missing-btn" class="btn btn-success"
+                ng-keydown="initValidationSequence('show-missing-btn')"
+                ng-mousedown="initValidationSequence('show-missing-btn')"
                 ng-click="checkMissing()">
           <span message key="draft.notify.check-missing"></span>
         </button>
