--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/date.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/date.formly.html
@@ -11,6 +11,6 @@
     <wc-utkast-komplettering key="{{options.key}}" margin-top="true"></wc-utkast-komplettering>
   </div>
   <div class="col-md-6">
-    <span wc-date-picker-field target-model="model[options.key]" add-date-parser="loose" on-blur="validate()"></span>
+    <span wc-date-picker-field target-model="model[options.key]" add-date-parser="loose" on-blur="validate()" max-date="{{to.maxDate}}"></span>
   </div>
 </div>
