INTYG-3588: Dolde specade fält på övriga intyg.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/fk/wcIntygCategory.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/fk/wcIntygCategory.directive.html
@@ -1,4 +1,4 @@
-<div class="intyg-block clearfix">
+<div class="intyg-block clearfix" ng-show="showCategory()">
   <div class="intyg-block__titlerow">
     <h3 class="intyg-block__heading">
       <span ng-if="fieldLabel" message key="{{fieldLabel}}"></span>
