--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/fk/wcIntygFields.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/fk/wcIntygFields.directive.html
@@ -1,6 +1,6 @@
 <div>
 
-  <div wc-intyg-category field-dynamic-label="KAT_{{group.templateOptions.category}}.RBK"category-key="{{group.templateOptions.category}}" ng-repeat="group in intygFields">
+  <div wc-intyg-category field-dynamic-label="KAT_{{group.templateOptions.category}}.RBK" category-name="{{group.templateOptions.categoryName}}" category-key="{{group.templateOptions.category}}" intyg-model="intygModel" ng-repeat="group in intygFields">
     <div ng-repeat="field in group.fieldGroup">
       <div wc-intyg-field category-key="{{group.templateOptions.category}}" prev-field="field.fieldGroup[$index-1]" field="field" next-field="group.fieldGroup[$index+1]"
            intyg-model="intygModel"></div>
