INTYG-3652:  Rensat bort alla spår av kod/markup/css i relaterat till htmlutskrift av utkast/makulerade intyg.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/wcFmbHelpDisplay.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/wcFmbHelpDisplay.directive.html
@@ -1,6 +1,6 @@
 <div>
   <div ng-show="fmbAvailable">
-    <div class="fmb print-hide">
+    <div class="fmb">
       <button id="{{relatedFormId}}-fmb-button" type="button" class="btn btn-default btn-fmb" ng-click="status.open = !status.open">FMB <i
           class="glyphicon fmb-glyphicon"
           ng-class="{'glyphicon-minus-sign': status.open, 'glyphicon-plus-sign': !status.open}"></i></button>
