--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
@@ -1,5 +1,5 @@
 <div id="utkast-footer">
-  <div ng-if="!isSigned" class="print-hide utkast-footer">
+  <div ng-if="!isSigned" class="utkast-footer">
 
     <!-- Läkare: Signera -->
     <div wc-authority="SIGNERA_INTYG" intygstyp="{{viewState.common.intyg.type}}">
