--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastPatientAddressUpdater.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastPatientAddressUpdater.directive.html
@@ -1,4 +1,4 @@
-<div class="wc-utkast-patient-address-updater print-hide" wc-authority="HANTERA_PERSONUPPGIFTER">
+<div class="wc-utkast-patient-address-updater" wc-authority="HANTERA_PERSONUPPGIFTER">
   <button type="button" id="fetchPatientButton" class="btn btn-default btn-info" ng-click="onUpdateAddressClick()">
     <img ng-if="fetchingPatientData" ng-src="/img/loader-small.gif" /><i ng-if="!fetchingPatientData" class="glyphicon glyphicon-refresh"></i>
   </button>
