INTYG-3574: Visa endast fälten diagnos, bedömning och övrigt om smittskyddsintyg

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/intyg/sjukskrivningView.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/intyg/sjukskrivningView.directive.html
@@ -1,11 +1,11 @@
 <div class="row">
-  <div data-ng-repeat="grad in grader" ng-show="fieldModel[sjukskrivningView][grad]">
+  <div data-ng-repeat="grad in grader" ng-if="hasSjukskrivning(grad)">
     <div class="col-xs-3">
       <span dynamic-label
-            key="KV_FKMU_0003.{{fieldModel[sjukskrivningView][grad].sjukskrivningsgrad}}.RBK"></span>
+            key="KV_FKMU_0003.{{getSjuksrivningsgrad(grad)}}.RBK"></span>
     </div>
     <div class="col-xs-9">
-      från och med <strong>{{fieldModel[sjukskrivningView][grad].period.from}}</strong> till och med <strong>{{fieldModel[sjukskrivningView][grad].period.tom}}</strong>
+      från och med <strong>{{getSjuksrivningFrom(grad)}}</strong> till och med <strong>{{getSjuksrivningTom(grad)}}</strong>
     </div>
     <div class="clearfix"></div>
   </div>
