--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkMultiText.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkMultiText.formly.html
@@ -9,7 +9,7 @@
 
   <div ng-if="to.open" class="fold-animation">
 		<label class="control-label inline-block webcert-top-padding-section" ng-class="{'bold' : to.bold}">
-        <span dynamic-label key="DFR_{{to.frgId}}.1.RBK"></span> *
+        <span dynamic-label key="DFR_{{to.frgId}}.1.RBK"></span>
         <span wc-help-mark field-dynamic-help-text="DFR_{{to.frgId}}.1.HLP"></span>
     </label>
 		<textarea id="{{options.key}}" name="{{options.key}}" rows="6" class="form-control" auto-expand ng-model="model[options.key]"
