INTYG-3662: Uppdaterat länken till pts.se i cookie bannern

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/cookiebanner/wcCookieBanner.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/cookiebanner/wcCookieBanner.directive.html
@@ -20,7 +20,7 @@
               Observera att du då inte kommer kunna logga in i Webcert igen när du har avslutat den nuvarande sessionen och stängt webbläsaren.</p>
 
             <p>Mer information om kakor (cookies) på <a
-                href="http://www.pts.se/sv/Privat/Internet/Integritet1/Fragor-och-svar-om-kakor-for-anvandare2/"
+                href="https://www.pts.se/sv/Privat/Internet/Skydd-av-uppgifter/Fragor-och-svar-om-kakor-for-anvandare1/"
                 target="_blank">Post- och telestyrelsens webbplats</a></p>
 
           </div>
