INTYG-3659: GUI för intygheader på avliden patient.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcIntygPatientNamnPersonnummer.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcIntygPatientNamnPersonnummer.directive.html
@@ -1,3 +1,6 @@
+<span>
   <label class="control-label" id="patientNamnPersonnummer">
-    {{ patientName }} - {{ personId | PersonIdFormatter }}
-  </label>
+    <span ng-if="patientDeceased"
+          class="glyphicon glyphicon-ban-circle mark-webcert-red"></span> {{ patientName }} - {{ personId | PersonIdFormatter }}
+  </label> <span ng-if="patientDeceased" class="mark-webcert-red">OBS! Patienten har avlidit.</span>
+</span>
