--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -27,10 +27,11 @@
         <div class="inline-block" style="margin-right:10px"
              wc-intyg-patient-namn-personnummer
              patient-name="viewState.intygModel.grundData.patient.fullstandigtNamn"
+             patient-deceased="isPatientDeceased()"
              person-id="viewState.intygModel.grundData.patient.personId">
         </div>
       </div>
-      <div class="form-group buttonbar">
+      <div class="form-group">
         <div class="btn-row">
           <button type="button"
                   id="sendBtn"
@@ -48,17 +49,9 @@
                   id="downloadprint"
                   class="btn btn-info"
                   intygstyp="{{intygstyp}}"
-                  ng-if="showPrintBtn() && !makuleratIntyg()"
+                  ng-if="showPrintBtn()"
                   ng-click="print(viewState.intygModel, false)">
             <span message key="common.button.save.as.pdf"></span>
-          </button>
-          <!-- html utskrift av makulerat intyg  -->
-          <button type="submit"
-                  value="submit"
-                  class="btn btn-info"
-                  ng-if="makuleratIntyg()"
-                  ng-click="print(viewState.intygModel, false)">
-            Skriv ut
           </button>
           <div id="downloadprintemployer" intygstyp="{{intygstyp}}" style="display:inline;">
             <div class="btn-group" ng-if="showEmployerPrintBtn() && !makuleratIntyg()">
@@ -97,7 +90,7 @@
                   intygstyp="{{intygstyp}}"
                   id="copyBtn"
                   class="btn btn-info"
-                  ng-if="!viewState.common.intygProperties.isRevoked && !viewState.common.isIntygOnRevokeQueue && !viewState.common.common.sekretessmarkering"
+                  ng-if="showKopieraButton()"
                   ng-click="copy(viewState.intygModel)"
                   uib-popover="{{copyBtnTooltipText}}"
                   popover-trigger="mouseenter"
@@ -112,7 +105,7 @@
                   intygstyp="{{intygstyp}}"
                   id="fornyaBtn"
                   class="btn btn-info"
-                  ng-if="intygstyp === 'fk7263' && !viewState.common.intygProperties.isRevoked && !viewState.common.isIntygOnRevokeQueue && !viewState.common.common.sekretessmarkering"
+                  ng-if="showFornyaButton()"
                   ng-click="fornya(viewState.intygModel)"
                   uib-popover="{{fornyaBtnTooltipText}}"
                   popover-trigger="mouseenter"
@@ -126,8 +119,8 @@
                   request-origin="!UTHOPP"
                   intygstyp="{{intygstyp}}"
                   id="makuleraBtn"
-                  class="btn btn-inverse"
-                  ng-if="!viewState.common.intygProperties.isRevoked && !viewState.common.isIntygOnRevokeQueue"
+                  class="btn btn-default pull-right"
+                  ng-if="!makuleratIntyg()"
                   ng-click="makulera(viewState.intygModel)"
                   wc-check-vardenhet
                   vardenhet="{{viewState.enhetsId}}"
@@ -139,6 +132,7 @@
             Makulera
           </button>
         </div>
+        <div class="clearfix"></div>
       </div>
 
       <div wc-secrecy-mark-message person-id="viewState.intygModel.grundData.patient.personId" type="intyg"></div>
