--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/headers/wcHeader.partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/headers/wcHeader.partial.html
@@ -6,10 +6,13 @@
       <span wc-authority="!NAVIGERING" class="headerbox-logo pull-left">
         <span id="webcertLogo" class="webcertLogo" ><img alt="Till startsidan" src="/img/webcert_logo.png" /></span></span>
       <span class="headerbox-date pull-left">
-        <span ng-class="{'single-location': !hasOtherLocationsStats() && !moreThanOneUnit()}">
+        <span ng-class="{'single-location': !hasOtherLocationsStats() && !moreThanOneUnit() && unitInactive()}">
           <span id="wc-header-location-date" class="location">{{today | date:"shortDate"}}</span>
           <span id="wc-header-location-care-giver" class="location" ng-if="user.valdVardgivare"> - {{user.valdVardgivare.namn}}</span>
           <span id="wc-header-location-care-unit" class="location" ng-if="user.valdVardgivare" wc-authority role="!PRIVATLAKARE"> - {{user.valdVardenhet.namn}}</span><br>
+        </span>
+        <span id="inactiveWarning" class="otherLocations" ng-show="unitInactive()">
+            <span class="glyphicon glyphicon-exclamation-sign"></span> OBS! Enheten är markerad som inaktiv i journalsystemet.
         </span>
         <span id="otherLocations" class="otherLocations" wc-authority="ATKOMST_ANDRA_ENHETER"
               ng-show="hasOtherLocationsStats()"><span class="bold">{{otherLocationsStatsCount()}}</span> ej hanterade frågor och ej signerade utkast på andra vårdenheter.</span>
