--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/new/arendeNew.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/new/arendeNew.directive.html
@@ -62,7 +62,7 @@
       </button>
 
       <!-- Avbryt -->
-      <button type="button" class="btn btn-default btn-info" ng-click="toggleArendeForm()" id="cancelArendeBtn">Avbryt
+      <button type="button" class="btn btn-info" ng-click="toggleArendeForm()" id="cancelArendeBtn">Avbryt
         fråga
       </button>
     </div>
