--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastPatientAddressUpdater.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastPatientAddressUpdater.directive.html
@@ -1,5 +1,5 @@
 <div class="wc-utkast-patient-address-updater" wc-authority="HANTERA_PERSONUPPGIFTER">
-  <button type="button" id="fetchPatientButton" class="btn btn-default btn-info" ng-click="onUpdateAddressClick()">
+  <button type="button" id="fetchPatientButton" class="btn btn-info" ng-click="onUpdateAddressClick()">
     <img ng-if="fetchingPatientData" ng-src="/img/loader-small.gif" /><i ng-if="!fetchingPatientData" class="glyphicon glyphicon-refresh"></i>
   </button>
   <span class="patient-address-updater-label">Hämta adressuppgifter från personuppgiftstjänsten</span>
